Add missing dependencies and export

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": {
     "type": "git",
     "url": "https://tervis.visualstudio.com/TervisCustomyzer/_git/TervisCustomyzerServiceJS"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
